Update and improve some things